<resources>
    <string name="app_name">EventMage</string>
    <string name="welcome_to_eventmage">Welcome to EventMage</string>
    <string name="et_email">E-mail</string>
    <string name="et_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="reset_password">Reset password ?</string>
    <string name="create_or_search_for_events">Create or Search for Events!</string>
    <string name="logout">LOGOUT</string>
    <string name="create_event">Create Event</string>
    <string name="event_news_feed">Event News Feed</string>
    <string name="name_of_event">Name of Event</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
  <!--  <string name="description">Description</string>-->
    <string name="example_application">Example application</string>
    <string name="todo">TODO</string>
</resources>
